--- a/src/components/transactions/index.css
+++ b/src/components/transactions/index.css
@@ -12,9 +12,9 @@
   user-select: none;
   width: var(--spacer-xxlarge);
   height: var(--spacer-xxlarge);
-  font-size: var(--font-xlarge);
+  font-size: var(--font-large);
   font-weight: 600;
-  border-radius: var(--spacer-smallall);
+  border-radius: var(--spacer-small);
   border: 2px solid var(--primary-300);
   background-color: var(--background-900);
   text-transform: uppercase;
@@ -25,7 +25,8 @@
 
 table {
   background-color: var(--background-800);
-  border-radius: var(--spacer-smallall);
+  border-radius: var(--spacer-small);
+  border-collapse: collapse;
   width: 100%;
   text-align: left;
 }
@@ -34,9 +35,15 @@ td {
   padding: var(--spacer-medium);
 }
 
+th:last-child,
+td:last-child {
+  text-align: right;
+}
+
 th {
   color: var(--primary-900);
   border-bottom: 1px solid var(--primary-300);
+  color: var(--primary-300);
   padding: var(--spacer-medium);
   text-align: left;
 }
@@ -45,4 +52,10 @@ th {
   display: grid;
   grid-template-columns: min-content 1fr;
   gap: var(--spacer-medium);
+}
+
+.transaction-category {
+  color: var(--primary-300);
+  font-size: .875rem;
+  line-height: 1.5;
 }
